tests/specs/run/unstable/kv.ts
const db = await Deno.openKv();
